# afk_slackbot

./: .env.test  .gitignore  .gitmodules  .mise.toml  Dockerfile.test  Makefile  README.md  docker-compose-test.yaml  main.py  manifest.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: dependabot.yml
.github/workflows/: test.yaml
lib/: command_handlers.py  models.py  utils.py
lib/services/: __init__.py  database_service.py  jsonl_service.py  mongo_db.py  slack_service.py
tests/lib/services/: test_database_service.py
