[project]
name = "afk-slackbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "afk-parser",
    "babel>=2.17.0",
    "fastapi>=0.121.2",
    "motor>=3.7.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "slack-sdk>=3.38.0",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
afk-parser = { git = "https://github.com/astr0n0mer/afk_parser.git", rev = "stable" }

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
]
